force-app/main/default/objects/Pilot__c/Pilot__c.object-meta.xml
<CustomObject>
    <label>Pilot</label>
    <nameField>
        <displayFormat>Pilot ID-{0000}</displayFormat>
        <label>Pilot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>