force-app/main/default/objects/Pilot__c/fields/AGE__c.field-meta.xml
<CustomField>
    <fullName>AGE__c</fullName>
    <formula>(TODAY() - DOB__c )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>