force-app/main/default/objects/Pilot__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF( ISPICKVAL( Experience__c , &apos;Less Than 1 Year&apos;) , &apos;Junior&apos;, IF( ISPICKVAL( Experience__c , &apos;2 - 5 Years&apos;),&apos;Senior&apos;,&apos;Super Senior&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>