force-app/main/default/objects/Pilot__c/validationRules/Prevent_pilot_age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_pilot_age_less_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>AGE__c &lt; 18</errorConditionFormula>
    <errorMessage>Age must be greater than 18</errorMessage>
</ValidationRule>