force-app/main/default/objects/Pilot__c/validationRules/prevent_same_First_and_last_name.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_same_First_and_last_name</fullName>
    <active>true</active>
    <errorConditionFormula>First_Name__c =  Last_Name__c</errorConditionFormula>
    <errorMessage>First Name and Last name should not be same</errorMessage>
</ValidationRule>